Image path updated

--- a/odoo12/pantaq/static/description/index.html
+++ b/odoo12/pantaq/static/description/index.html
@@ -12,11 +12,11 @@
 <h2 style="color:#808080;text-align: center;">Initial Configuration</h2><br>
 <ul>
     <li>
-        <p>Create some procurement team ( Sales &gt;&gt; Configuration &gt;&gt; Sales Teams )</p>
+        <p>Create some procurement team ( Sales &gt;&gt; Configuration &gt;&gt; Sales Teams(Team Category as Procurement)) &amp; assign Users to the Team</p>
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/sales_teams.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/sales_teams.png" style="height:400px;">&nbsp;</p>
 </div><br>
 <h2 style="color:#808080;text-align: center;">Enquires</h2>
 <ul>
@@ -25,7 +25,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/enquires.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/enquires.png" style="height:400px;">&nbsp;</p>
 </div>
 <p><br>&nbsp;</p>
 <ul>
@@ -35,7 +35,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/create_enq.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/create_enq.png" style="height:400px;">&nbsp;</p>
 </div><br>
 <h2 style="color:#808080;text-align: center;">RFQs (Request For Quotation)</h2>
 <ul>
@@ -44,7 +44,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/map_product_vendor.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/map_product_vendor.png" style="height:400px;">&nbsp;</p>
 </div>
 <p><em>Based on the number of vendors mapped to the products, the number of RFQs will be created for submission</em>
 </p>
@@ -54,7 +54,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/rfq_update_send.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/rfq_update_send.png" style="height:400px;">&nbsp;</p>
 </div>
 <p><br>&nbsp;</p>
 <p><em>Note: Once RFQ is sent, need to update the status via&nbsp;</em><em><strong>Response
@@ -66,7 +66,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/rfq_approve_reject.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/rfq_approve_reject.png" style="height:400px;">&nbsp;</p>
 </div>
 <p><br>&nbsp;</p>
 <ul>
@@ -75,7 +75,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/rfq_compare.png" style="height:200px;">&nbsp;</p>
+    <p><img src="../src/img/rfq_compare.png" style="height:200px;">&nbsp;</p>
 </div>
 <p>(Click on Purchase &gt;&gt; RFQ Product price compare. Select Enquiry # and proceed)</p>
 <p><br>&nbsp;</p>
@@ -86,7 +86,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/rfq_compare_list.png" style="height:200px;">&nbsp;</p>
+    <p><img src="../src/img/rfq_compare_list.png" style="height:200px;">&nbsp;</p>
 </div><br>
 <h2 style="color:#808080;text-align: center;">Internal Quotations</h2>
 <ul>
@@ -95,7 +95,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/int_qtn.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/int_qtn.png" style="height:400px;">&nbsp;</p>
 </div>
 <p><br>&nbsp;</p>
 <ul>
@@ -104,7 +104,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/update_int_qtn.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/update_int_qtn.png" style="height:400px;">&nbsp;</p>
 </div>
 <p><br>&nbsp;</p><br>
 <h2 style="color:#808080;text-align: center;">Customer Quote( i.e. Sale Order )</h2>
@@ -114,7 +114,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/convert_to_cq.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/convert_to_cq.png" style="height:400px;">&nbsp;</p>
 </div>
 <p><br>&nbsp;</p>
 <ul>
@@ -123,7 +123,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/update_profit_int_qtn.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/update_profit_int_qtn.png" style="height:400px;">&nbsp;</p>
 </div>
 <p><br>&nbsp;</p>
 <ul>
@@ -132,7 +132,7 @@
     </li>
 </ul>
 <div class="oe_demo oe_picture oe_screenshot">
-    <p><img src="../img/profit_analysis.png" style="height:400px;">&nbsp;</p>
+    <p><img src="../src/img/profit_analysis.png" style="height:400px;">&nbsp;</p>
 </div>
 <p><br>&nbsp;</p>
 <p><br>&nbsp;</p>
